--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 ## Uncomment line below if you prefer to
 ## keep compiled files out of version control
+dist/
 node_modules
 package-lock.json
 .DS_Store
